# trapi

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
code/: README.md
code-analysis/: README.md
input/: README.md
model/: README.md
submission/: README.md
trapi/: aggregate.py  cross_validate.py  encode.py  feature.py  load.py  model.py  plot.py  train.py  utils.py
