[tool.poetry]
name = "trapi"
version = "0.1.8"
description = "Tools for machine learning competitions"
authors = ["trapi <shohei.goda.12.1@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/KenkenGoda"
repository = "https://github.com/KenkenGoda/trapi"
documentation = ""
keywords = ["lightgbm"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
my-script = "trapi:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
